# tcgdex_api

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  query.rs
src/endpoints/: cards.rs  categories.rs  hps.rs  illustrators.rs  mod.rs  rarities.rs  retreats.rs  series.rs  sets.rs  types.rs
tests/: tcgdex_tests.rs
