[package]
name = "tcgdex_api"
version = "0.1.0"
authors = ["Ludovic Socié"]
license = "MIT"
description = "This API allows to interact with tcgdex Pokémon cards database."
edition = "2021"
repository = "https://github.com/LudSoc/tcgdex_api"
homepage = "https://docs.rs/tcgdex_api/latest/tcgdex_api/"

[dependencies]
serde_json = "1.0.116"
thiserror = "1.0.64"

[dependencies.reqwest]
version = "0.12"
features = ["json", "blocking"]

[dependencies.serde]
version = "1.0"
features = ["derive"]